[package]
name = "hotspot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
chrono = "0.4"
globwalk = "0.8.1"
path-absolutize = "3.0.11"
eggtimer = "0.5.0"
rust-code-analysis = "0.0.19"
